--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -50,6 +50,7 @@ html {
   justify-content: space-between;
 }
 .navbar .logo a {
+  text-decoration: none;
   color: #fff;
   font-size: 35px;
   font-weight: 600;
